# gw2-compare

./: CLAUDE.md  DESIGN.md  README.md  config.yaml  main.py  pyproject.toml
gw2compare/: api.py  app.py  config.py  math.py
gw2compare/ui/: dialogs.py  group_panel.py  main_screen.py
